reformat and modify all essential classes